samples/_failures_safe/1761318231_96b15d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3cc4e12.c: In function ‘main’:
./samples/SAFE/__tmp_b3cc4e12.c:175:38: error: missing terminating ' character
  175 |     if (len > 0 && input[len - 1] == '\
      |                                      ^~
./samples/SAFE/__tmp_b3cc4e12.c:175:5: error: expected expression at end of input
  175 |     if (len > 0 && input[len - 1] == '\
      |     ^~
./samples/SAFE/__tmp_b3cc4e12.c:175:5: error: expected declaration or statement at end of input
